k8s/deploy-website-lukeshort-cloud.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: deploy-website-lukeshort-cloud
  name: deploy-website-lukeshort-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-website-lukeshort-cloud
  strategy: {}
  template:
    metadata:
      labels:
        app: deploy-website-lukeshort-cloud
    spec:
      containers:
        - name: nginx
          image: nginx:1.19.10
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: tmp-dir
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: tmp-dir
          emptyDir: {}
