k8s/ing-website-lukeshort-cloud.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ing-website-lukeshort-cloud
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: "clusterissuer-letsencrypt-production"
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.org/redirect-to-https: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lukeshort.cloud
      secretName: secret-website-lukeshort-cloud
  rules:
    - host: lukeshort.cloud
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: svc-website-lukeshort-cloud
                port:
                  number: 80
